--- a/templates/about.html
+++ b/templates/about.html
@@ -120,15 +120,17 @@
     }
   </style>
   <body>
-    <div class="row m-xl-5 p-sm-2">
+    <div class="row p-xl-5 p-sm-2">
         <div class="col-xl-3 col-12-lg col-md-12 bord d-lg-block d-none" style="height: fit-content; min-height: 200px; background-color:  rgb(16, 16, 16); top: 0; border-radius: 0;">
+          <a href="{%url 'main'%}" style="color: white; text-decoration: none;">
             <div class="col-12 mt-3 d-flex" style="height: 70px;">
                 <div class="profile"></div>
                 <div class="ms-2">
                   <h1 class="m-0">Zayn.S</h1>
                   <h6>Backend dev</h6>
                 </div>
-                </div>
+            </div>
+          </a>
                 <div class="col-12  justify-content-left d-flex mt-3">
                     <br>
                 </div>
